--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 /* ESERCIZIO 1 */
 .ex-1-square {
     width: 100px;
@@ -105,9 +106,24 @@
         rotate:360deg;
     }
 }
+/* ESERCIZIO 11 */
 .ex-11-icon {
     font-size: 60px;
 }
+.ex-11-icon:hover{
+    animation: rotate-2 1 2s linear ;
+}
+@keyframes rotate-2{
+    0% {
+        transform : rotate(0deg));
+    }
+    80% {
+       transform : rotate(320deg) ;
+    }
+    100% {
+        transform : rotate(0deg) ;
+    }
+/* BOTTONI ESERCIZI 12-13 */
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
@@ -137,4 +153,4 @@
     width: 60px;
     height: 20px;
 }
-
+/* ESERCIZIO 12 */
